removing overflow-x hidden as it was just hidding the overflow, rather than fixing it. This meant that on smaller screens, some elements of the site would be slightly off center. Addressing this  by setting the max width of body the section and the body

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     color: white;
     scroll-behavior: smooth;
     background-color: #555555;
-    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .container {
@@ -114,6 +114,7 @@ section {
     color: white;
     height: 80vh;
     width: 100vw;
+    max-width: 100%;
 }
 
 section video {
